--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,7 +11,7 @@ p {
 body {
 
 /* *************  ROYAL BLUE ON TOP ************  */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #0000c2), color-stop(100%, #002357));
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #002357), color-stop(100%, #0000c2));
     background-attachment: fixed;
 
 
@@ -33,7 +33,7 @@ body {
 
 .navbar-toggler {
     color: rgb(0, 35, 87);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #9de00c), color-stop(100%, #00812b));
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, rgb(207, 197, 59)), color-stop(100%, #CFB53B));
     box-shadow: 0px 0px 15px 4px #C0C0C0;
     margin-right: 5%;
     margin-top: 3%;
@@ -95,17 +95,17 @@ body {
 /* ******** BUTTONS ************  */
 
 .button {
-    color: #002357;
+    color: #021db6;;
     /* background: rgb(236, 231, 226); */
     /* background: white; */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(5%, #9de00c), color-stop(100%, #00812b));
-    /* background-image: radial-gradient(#9de00c 25%, #00812b 90%); */
+    /* background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, #eee243), color-stop(110%, #CFB53B)); */
+    background-image: radial-gradient(#eee243 15%, #CFB53B 90%);
     width: 95%; 
-    padding: 2%;
+    padding: 3%;
     /* border: 2px solid #000080;  */
     /* border: 2px solid #000080; */
     ;
-    border-top: 20px solid #000080;
+    border-top: 20px solid #021db6;;
     ;
     display:inline-block; 
     outline: none;
@@ -170,7 +170,7 @@ body {
     /* border: 1px solid #5f472d; */
     padding: 2%;
     /* padding-top: 3%; */
-    /* margin-bottom: 5%; */
+    margin-bottom: 2%;
 }
 
 #secondary-employee-tasks {
@@ -183,7 +183,7 @@ body {
 
 .material-icons {
     font-size: 2.5em;
-    color: #002357;
+    color: #021db6;;
     /* color: white; */
 }
 
